--- a/_src/templates/index.html
+++ b/_src/templates/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Adalab Web Starter Kit</title>
+    <title>Ejercicio evaluación final 2</title>
     <link rel="icon" href="./favicon.png" />
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./assets/css/main.css" />
@@ -12,12 +12,9 @@
 
   <body>
     <div class="page">
-      <partial src="_header.html" title="Bienvenidos a Adalab"></partial>
       <partial src="_main.html" label="Main"></partial>
-      <partial src="_link.html" aClass="link__adalab" text="Adalab" url="https://adalab.es"></partial>
-      <partial src="_link.html" aClass="link__github" text="GitHub" url="https://github.com"></partial>
-      <partial src="_footer.html"></partial>
     </div>
+    <script src="./assets/js/main.js"></script>
   </body>
 
 </html>
