--- a/_src/templates/partials/_main.html
+++ b/_src/templates/partials/_main.html
@@ -1,4 +1,8 @@
 <main class="page__main">
-  
-
+    <h1 class="main__title">Buscador de series</h1>
+    <form action="" method="POST" id="form" class="form">
+        <input type="text" id="main__input" class="main__input">
+        <button type="submit" id="button-search" class="button-search" value="search">Search</button>
+    </form>
+    <ul class="main__list"></ul>
 </main>
