--- a/_src/templates/index.html
+++ b/_src/templates/index.html
@@ -13,6 +13,7 @@
   <body>
     <div class="page">
       <partial src="_main.html" label="Main"></partial>
+      <partial src="_aside.html" label="Aside"></partial>
     </div>
     <script src="./assets/js/main.js"></script>
   </body>
