--- a/_src/assets/scss/main.scss
+++ b/_src/assets/scss/main.scss
@@ -1,5 +1,4 @@
 @import "core/settings";
 @import "core/reset";
-@import "components/page";
 @import "components/main";
-
+@import "components/aside";
