--- a/_src/assets/scss/components/_aside.scss
+++ b/_src/assets/scss/components/_aside.scss
@@ -2,12 +2,13 @@
     
     display: flex;
     flex-direction: column;
+    
 
     & .aside__title{
         margin-bottom: 15px;
         margin-top: 15px;
-        font-family: 'Lucida Sans Unicode';
-        font-size: 15px;
+        font-family: $font-main;
+        font-size: 20px;
         color: aquamarine;
     }
 
@@ -18,8 +19,17 @@
             font-size: 20px;
             color: brown;
 
+
             & img{
                 width: 60%;
+            }
+            & button{
+                width: 15px;
+                padding: 2px;
+                border-radius: 100%;
+                background-color: black;
+                color: white;
+                text-transform: lowercase;
             }
         }
     }
