--- a/_src/assets/scss/components/_main.scss
+++ b/_src/assets/scss/components/_main.scss
@@ -1,16 +1,18 @@
 .page{
   display: flex;
   flex-direction: row-reverse;
+  
 }
 .page__main{
   width: 70%;
+  background-color: rgb(232, 248, 245);
   
   & .main__title{
     margin-top: 15px;
     margin-bottom: 10px;
-    font-family: 'Lucida Sans Unicode';
+    font-family: $font-main;
     font-size: 20px;
-    color: aquamarine;
+    color: rgb(0, 137, 123);
     text-transform: uppercase;
   }
 
@@ -21,10 +23,24 @@
     flex-wrap: wrap;
 
     & li{
+      padding-top: 15px;
+      display: flex;
+      flex-direction: column-reverse;
+      justify-content: center;
+      align-items: center;
+      margin-left: 15px;
+      margin-right: 15px;
       margin-top: 15px;
       margin-bottom: 15px;
-      color: crimson;
-      font-size: 15px;
+      color: rgb(236, 64, 122);
+      font-family: $font-main;
+      font-size: 20px;
+      background-color:rgb(171, 235, 198);
+      text-transform: uppercase;
+
+      & img{
+        width: 70%;
+      }
     }
   }
 
