--- a/_src/assets/scss/components/_aside.scss
+++ b/_src/assets/scss/components/_aside.scss
@@ -9,28 +9,60 @@
         margin-top: 15px;
         font-family: $font-main;
         font-size: 20px;
-        color: aquamarine;
+        color: rgb(0, 137, 123);
+        text-align: center;
+        text-transform: uppercase;
     }
 
     & .aside__list{
         list-style: none;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin-bottom: 15px;
 
         & li{
-            font-size: 20px;
-            color: brown;
+            width: 100%;
+            margin-top: 10px;
+            margin-bottom: 10px;
+            display: flex;
+            flex-direction: row-reverse;
+            justify-content: space-around;
+            align-items: center;
+
+            & p{
+                width: 33%;
+                text-transform: uppercase;
+                font-size: 20px;
+                color: rgb(236, 64, 122);
+                
+            }
 
 
             & img{
-                width: 60%;
+                width: 33%;
             }
             & button{
-                width: 15px;
-                padding: 2px;
+                width: 20px;
+                padding: 0;
+                height: 20px;
                 border-radius: 100%;
                 background-color: black;
                 color: white;
                 text-transform: lowercase;
+                border: none;
+                text-align: center;
             }
+        }
+
+        & button{
+            padding: 10px;
+            border-radius: 25%;
+            border: none;
+            text-transform: uppercase;
+            background-color: black;
+            color: white;
+
         }
     }
 }
