--- a/_src/assets/scss/components/_aside.scss
+++ b/_src/assets/scss/components/_aside.scss
@@ -35,6 +35,9 @@
                 text-transform: uppercase;
                 font-size: 20px;
                 color: rgb(236, 64, 122);
+                @media all and (max-width:768px){
+                    font-size: 12px;
+                }
                 
             }
 
@@ -52,6 +55,11 @@
                 text-transform: lowercase;
                 border: none;
                 text-align: center;
+                @media all and (max-width:768px){
+                    width: 14px;
+                    height: 14px;
+                    font-size: 8px;
+                }
             }
         }
 
