--- a/_src/assets/scss/components/_main.scss
+++ b/_src/assets/scss/components/_main.scss
@@ -23,6 +23,9 @@
     color: white;
     border: none;
     padding: 6px;
+    @media all and (max-width:768px){
+      margin-top: 10px;
+    }
   }
 
   & .main__list{
