--- a/_src/assets/scss/components/_main.scss
+++ b/_src/assets/scss/components/_main.scss
@@ -2,24 +2,27 @@
   display: flex;
   flex-direction: row-reverse;
   justify-content: space-around;
+  background-color: #FAEEE7;
+  min-height: 100vh;
+  width: 100%;
   
 }
 .page__main{
   width: 70%;
-  background-color: white;
+  background-color: #FAEEE7;
   
   & .main__title{
     margin-top: 15px;
     margin-bottom: 10px;
     font-family: "Helvetica";
     font-size: 20px;
-    color: rgb(0, 137, 123);
+    color: #4cd3c2;
     text-transform: uppercase;
   }
 
   & .button-search{
     border-radius: 25%;
-    background-color: rgb(236, 64, 122);
+    background-color: #0a97b0;
     color: white;
     border: none;
     padding: 6px;
@@ -33,33 +36,54 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+    @media all and (max-width:500px){
+      display: flex;
+      flex-direction: column;
+      
+    }
 
     & li{
+      width: 25%;
+      height: 35%;
       padding-top: 15px;
       display: flex;
       flex-direction: column-reverse;
-      justify-content: center;
+      justify-content: space-around;
       align-items: center;
       margin-left: 15px;
       margin-right: 15px;
       margin-top: 15px;
       margin-bottom: 15px;
-      color: rgb(236, 64, 122);
+      color: #FAEEE7;
       font-family: "Helvetica";
-      font-size: 20px;
-      background-color:rgb(171, 235, 198);
+      font-size: 16px;
+      background-color:#f54291;
       text-transform: uppercase;
+      border-radius: 7%;
+      box-shadow: 5px 5px 5px 5px #C9C9C9;
+
+      @media all and (max-width:500px){
+        width: 60%;
+      }
       @media all and (max-width:768px){
         font-size: 14px;
       }
 
       & img{
         width: 70%;
+        border-radius: 7%;
+      }
+
+      & p{
+        margin-top: 15px;
+        margin-bottom: 15px;
+        margin-left: 5px;
+        margin-right: 5px;
       }
 
       &.fav{
-        color: rgb(171, 235, 198);
-        background-color: rgb(236, 64, 122);
+        color: #FAEEE7;
+        background-color: #0a97b0;
       }
     }
   }
