--- a/_src/assets/scss/components/_aside.scss
+++ b/_src/assets/scss/components/_aside.scss
@@ -12,6 +12,9 @@
         color: #4cd3c2;
         text-align: center;
         text-transform: uppercase;
+        @media all and (max-width:768px){
+            font-size: 15px;
+          }
     }
 
     & .aside__list{
