--- a/_src/assets/scss/components/_aside.scss
+++ b/_src/assets/scss/components/_aside.scss
@@ -47,6 +47,7 @@
 
             & img{
                 width: 33%;
+                border-radius: 7%;
             }
             & button{
                 width: 20px;
