--- a/_src/assets/scss/components/_main.scss
+++ b/_src/assets/scss/components/_main.scss
@@ -98,6 +98,10 @@
       border-radius: 7%;
       box-shadow: 5px 5px 5px 5px #c9c9c9;
 
+      &:hover{
+        opacity: .8;
+      }
+
       @media all and (max-width: 500px) {
         width: 70%;
         height: 35%;
