update master and add styles

--- a/_src/assets/scss/components/_main.scss
+++ b/_src/assets/scss/components/_main.scss
@@ -45,7 +45,8 @@
   & .main__input {
     color: #f54291;
     border: 2px solid #0a97b0;
-    width: 200px;
+    width: 220px;
+    height: 25px;
     background-color: #faeee7;
 
     &::placeholder {
