--- a/_src/assets/scss/components/_main.scss
+++ b/_src/assets/scss/components/_main.scss
@@ -1,3 +1,6 @@
+body{
+  background-color: #faeee7;
+}
 .page {
   display: flex;
   flex-direction: row-reverse;
@@ -5,6 +8,7 @@
   background-color: #faeee7;
   min-height: 100vh;
   width: 100%;
+  height: auto;
 
 }
 
@@ -29,6 +33,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  height: auto;
+  padding-right: 10px;
 
   & .main__title {
     margin-top: 15px;
@@ -64,6 +70,7 @@
     color: white;
     border: none;
     padding: 6px;
+    outline-style: none;
     @media all and (max-width: 768px) {
       margin-top: 10px;
     }
@@ -74,14 +81,17 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+    width: 100%;
     @media all and (max-width: 500px) {
       display: flex;
       flex-direction: column;
+      flex-wrap: nowrap;
     }
 
     & li {
       width: 25%;
       height: 35%;
+      max-height: 300px;
       padding-top: 15px;
       display: flex;
       flex-direction: column-reverse;
@@ -104,13 +114,13 @@
       }
 
       @media all and (max-width: 500px) {
-        width: 70%;
-        height: 35%;
+        width: 90%;
+        height: 25%;
         
       }
       @media all and (max-width: 768px) {
         font-size: 14px;
-        height: 25%;
+        height: 22%;
       }
 
       & img {
